--- a/frontend/src/pages/Login/Login.module.scss
+++ b/frontend/src/pages/Login/Login.module.scss
@@ -30,6 +30,7 @@
 		flex-direction: column;
 		gap: 0.5rem;
 		input {
+			font-size: 1rem;
 			padding: 1.3rem 1.5rem;
 			border: 1px solid var(--stroke-100);
 			border-radius: 30px;
